--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,8 @@
     <link href="includes/bootstrap.css" rel="stylesheet">
     <link href="includes/sticky-footer-navbar.css" rel="stylesheet">
     <link href="includes/font-awesome.css" rel="stylesheet">
-  <link href="includes/style.css" rel="stylesheet">
+    <link href="includes/style.css" rel="stylesheet">
+    <link href="includes/swipebox.css" rel="stylesheet">
     
 
 </head>
@@ -49,7 +50,56 @@
   <div class="placement"> 
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 img_gal">
+          <a href="images/large/1.jpg" class="swipebox" title=""><img src="images/large/1.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/2.jpg" class="swipebox" title=""><img src="images/large/2.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/3.jpg" class="swipebox" title=""><img src="images/large/3.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/4.jpg" class="swipebox" title=""><img src="images/large/4.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/5.jpg" class="swipebox" title=""><img src="images/large/5.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/6.jpg" class="swipebox" title=""><img src="images/large/6.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/7.jpg" class="swipebox" title=""><img src="images/large/7.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/8.jpg" class="swipebox" title=""><img src="images/large/8.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/9.jpg" class="swipebox" title=""><img src="images/large/9.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/10.jpg" class="swipebox" title=""><img src="images/large/10.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/11.jpg" class="swipebox" title=""><img src="images/large/11.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/12.jpg" class="swipebox" title=""><img src="images/large/12.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/13.jpg" class="swipebox" title=""><img src="images/large/13.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/14.jpg" class="swipebox" title=""><img src="images/large/14.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/15.jpg" class="swipebox" title=""><img src="images/large/15.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/16.jpg" class="swipebox" title=""><img src="images/large/16.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/17.jpg" class="swipebox" title=""><img src="images/large/17.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/18.jpg" class="swipebox" title=""><img src="images/large/18.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/19.jpg" class="swipebox" title=""><img src="images/large/19.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/20.jpg" class="swipebox" title=""><img src="images/large/20.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/21.jpg" class="swipebox" title=""><img src="images/large/21.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/22.jpg" class="swipebox" title=""><img src="images/large/22.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/23.jpg" class="swipebox" title=""><img src="images/large/23.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/24.jpg" class="swipebox" title=""><img src="images/large/24.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/25.jpg" class="swipebox" title=""><img src="images/large/25.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/26.jpg" class="swipebox" title=""><img src="images/large/26.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/27.jpg" class="swipebox" title=""><img src="images/large/27.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/28.jpg" class="swipebox" title=""><img src="images/large/28.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/29.jpg" class="swipebox" title=""><img src="images/large/29.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/30.jpg" class="swipebox" title=""><img src="images/large/30.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/31.jpg" class="swipebox" title=""><img src="images/large/31.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/32.jpg" class="swipebox" title=""><img src="images/large/32.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/33.jpg" class="swipebox" title=""><img src="images/large/33.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/34.jpg" class="swipebox" title=""><img src="images/large/34.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/35.jpg" class="swipebox" title=""><img src="images/large/35.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/36.jpg" class="swipebox" title=""><img src="images/large/36.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/37.jpg" class="swipebox" title=""><img src="images/large/37.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/38.jpg" class="swipebox" title=""><img src="images/large/38.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/39.jpg" class="swipebox" title=""><img src="images/large/39.jpg" class="smallpic1" alt="image"></a>
+          <a href="images/large/40.jpg" class="swipebox" title=""><img src="images/large/40.jpg" class="smallpic1" alt="image"></a>
+          <br>
+          <a href="images/large/h_1.jpg" class="swipebox" title=""><img src="images/large/1.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_2.jpg" class="swipebox" title=""><img src="images/large/2.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_3.jpg" class="swipebox" title=""><img src="images/large/3.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_4.jpg" class="swipebox" title=""><img src="images/large/4.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_5.jpg" class="swipebox" title=""><img src="images/large/5.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_6.jpg" class="swipebox" title=""><img src="images/large/6.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_7.jpg" class="swipebox" title=""><img src="images/large/7.jpg" class="smallpic2" alt="image"></a>
+
 
         </div>
       </div>
@@ -79,6 +129,7 @@
   <script src="includes/jquery-1.10.2.min.js"></script>
   <script src="includes/bootstrap.js"></script>
   <script src="includes/unslider.min.js"></script>
+  <script src="includes/swipebox.js"></script>
   <script src="includes/ready.js"></script>
 
 
