fixed wrong link .smallpic2 pics

--- a/gallery.html
+++ b/gallery.html
@@ -91,13 +91,13 @@
           <a href="images/large/39.jpg" class="swipebox" title=""><img src="images/large/39.jpg" class="smallpic1" alt="image"></a>
           <a href="images/large/40.jpg" class="swipebox" title=""><img src="images/large/40.jpg" class="smallpic1" alt="image"></a>
           <br>
-          <a href="images/large/h_1.jpg" class="swipebox" title=""><img src="images/large/1.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_2.jpg" class="swipebox" title=""><img src="images/large/2.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_3.jpg" class="swipebox" title=""><img src="images/large/3.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_4.jpg" class="swipebox" title=""><img src="images/large/4.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_5.jpg" class="swipebox" title=""><img src="images/large/5.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_6.jpg" class="swipebox" title=""><img src="images/large/6.jpg" class="smallpic2" alt="image"></a>
-          <a href="images/large/h_7.jpg" class="swipebox" title=""><img src="images/large/7.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_1.jpg" class="swipebox" title=""><img src="images/large/h_1.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_2.jpg" class="swipebox" title=""><img src="images/large/h_2.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_3.jpg" class="swipebox" title=""><img src="images/large/h_3.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_4.jpg" class="swipebox" title=""><img src="images/large/h_4.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_5.jpg" class="swipebox" title=""><img src="images/large/h_5.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_6.jpg" class="swipebox" title=""><img src="images/large/h_6.jpg" class="smallpic2" alt="image"></a>
+          <a href="images/large/h_7.jpg" class="swipebox" title=""><img src="images/large/h_7.jpg" class="smallpic2" alt="image"></a>
 
 
         </div>
