latest changes, finalized

--- a/history.html
+++ b/history.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="">
-
     <title>Sigma Kappa Phi - UT</title>
+    
+    <meta name="title" content="UTSKPHI | Website">
+    <meta name="description" content="The Alpha Chapter of Sigma Kappa Phi at the University of Texas - Austin">
+    <link rel="image_src" href="">
+    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta property="og:site_name" content="UTSKPHI | Website"/>
+    <meta content="http://utskphi.com/history.html" property="og:url">
+    <meta content="http://utskphi.com/images/symbol.jpg" property="og:image">
+    <link rel="shortcut icon" id="favicon" href="favicon.png"> 
+    <meta name="author" content="The Alpha Chapter of Sigma Kappa Phi at the University of Texas - Austin">
+    
 
     <!-- Bootstrap core CSS -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
